# Wildfire-Management

./: README.md
Analytics Engine Module/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  requirements.txt
Analytics Engine Module/config/: logging_config.yaml  settings.py
Analytics Engine Module/docs/: api_spec.yaml  architecture.md
Analytics Engine Module/scripts/: train_fire_spread_model.py  update_risk_parameters.py
Analytics Engine Module/src/bindings/: CMakeLists.txt  drone_analysis_bind.cpp  fire_behavior_bind.cpp  resource_optimization_bind.cpp  risk_assessment_bind.cpp  smoke_dispersion_bind.cpp
Analytics Engine Module/src/cpp/: CMakeLists.txt
Analytics Engine Module/src/cpp/drone_analysis/: CMakeLists.txt  image_processor.cpp  image_processor.hpp
Analytics Engine Module/src/cpp/fire_behavior/: CMakeLists.txt  fire_spread_model.cpp  fire_spread_model.hpp
Analytics Engine Module/src/cpp/resource_optimization/: CMakeLists.txt  resource_allocator.cpp  resource_allocator.hpp
Analytics Engine Module/src/cpp/risk_assessment/: risk_calculator.cpp  risk_calculator.hpp
Analytics Engine Module/src/cpp/smoke_dispersion/: CMakeLists.txt  dispersion_model.cpp  dispersion_model.hpp
Analytics Engine Module/src/cuda/: CMakeLists.txt  fire_spread_kernel.cu  smoke_dispersion_kernel.cu
Analytics Engine Module/src/python/api/: main.py
Analytics Engine Module/src/python/drone_analysi/: fire_detector.py
Analytics Engine Module/src/python/fire_behavior/: prediction_model.py
Analytics Engine Module/src/python/ml_models/: fire_spread_nn.py  resource_allocation_rf.py
Analytics Engine Module/src/python/resource_optimization/: optimizer.py
Analytics Engine Module/src/python/risk_assessment/: risk_model.py
Analytics Engine Module/src/python/smoke_dispersion/: dispersion_simulator.py
Analytics Engine Module/tests/cpp/: test_fire_spread_model.cpp
Collaboration Module/: README.md
Data Ingestion Module/: CMakeLists.txt  Dockerfile  README.md  doc.txt  docker-compose.yml  requirements.txt
Data Ingestion Module/config/: config.ini  logging.py  logging_config.yaml  settings.py
Data Ingestion Module/docs/: api_spec.yaml  architecture.md
Data Ingestion Module/scripts/: init_databases.sh  setup_kafka_topics.sh
Data Ingestion Module/src/bindings/: CMakeLists.txt  converter_bind.cpp  data_writer_bind.cpp  health_checker_bind.cpp  input_streams_bind.cpp  kafka_bind.cpp  preprocessor_bind.cpp
Data Ingestion Module/src/cpp/: CMakeLists.txt
Data Ingestion Module/src/cpp/conversion/: CMakeLists.txt  converter_core.cpp  converter_core.hpp
Data Ingestion Module/src/cpp/health/: CMakeLists.txt  health_checker_core.cpp  health_checker_core.hpp
Data Ingestion Module/src/cpp/input_streams/: config_manager.hpp  data_processor.hpp  input_handler.cpp  input_handler.hpp  input_source.hpp  logger.hpp
Data Ingestion Module/src/cpp/preprocessing/: CMakeLists.txt  preprocessor_core.cpp  preprocessor_core.hpp
Data Ingestion Module/src/cpp/storage/: CMakeLists.txt  data_writer_core.cpp  data_writer_core.hpp
Data Ingestion Module/src/cpp/streaming/: CMakeLists.txt  kafka_core.cpp  kafka_core.hpp
Data Ingestion Module/src/python/api/: main.py
Data Ingestion Module/src/python/conversion/: converter.py
Data Ingestion Module/src/python/input_streams/: __init__.py  stream_manager.py
Data Ingestion Module/src/python/metadata/: metadata_manager.py
Data Ingestion Module/src/python/preprocessing/: preprocessor.py
Data Ingestion Module/src/python/quality/: auditor.py  validator.py
Data Ingestion Module/src/python/storage/: data_writer.py
Data Ingestion Module/src/python/streaming/: kafka_consumer.py  kafka_producer.py
Data Ingestion Module/tests/cpp/: test_input_handler.cpp
Decision Support Module/: README.md
Security Module/: README.md
Synthetic Environment Module/: README.md
Visualization Module/: README.md
doc/: wildfire-management-ai-drone-system.md
